--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,16 +1,153 @@
-// http://ionicframework.com/docs/theming/
+.popover-content {
+    width: auto !important;
+}
+
+table thead tr th {
+    white-space: nowrap;
+}
+
+ion-icon.icon.item-icon::before {
+    font-size: 0.6em !important;
+}
+
+.accordion-head .label-md,
+.accordion-head ion-label.label.label-md {
+    margin: 0 !important;
+}
+
+.abs {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.abs2 {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    right: 15px;
+    transform: translateY(-50%);
+}
+
+.transparent-header {
+    // This is just to make the header transparent and button/icon with white color
+    .toolbar-content,
+    .back-button {
+        color: white;
+    }
+    .toolbar-background,
+    ion-navbar,
+    ion-header {
+        background: transparent !important;
+        background-color: transparent !important;
+    }
+    .header-md::after,
+    .toolbar-background-ios {
+        background-image: none;
+        border-bottom: 0;
+    }
+    .header-ios .toolbar-background-ios,
+    .footer-ios .toolbar-background-ios {
+        border: 0;
+    } // ---
+}
+
+.active {
+    background: #f4f4f5;
+}
+
+ion-content .scroll-content,
+.alert-message {
+    overflow-y: auto !important;
+}
 
 
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
+/*
+ *  STYLE 11
+ */
+
+div::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+div::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+div::-webkit-scrollbar-thumb {
+    background-color: #AAA;
+    border-radius: 10px;
+    background-image: -webkit-linear-gradient(90deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, .1) 50%, rgba(0, 0, 0, .1) 75%, transparent 75%, transparent)
+}
+
+.table-wrapper {
+    overflow-x: auto;
+}
+
+table {
+    text-align: center;
+    width: 99%;
+    thead {
+        tr th {
+            padding: 10px 3px;
+            background-color: #f5f5f5;
+        }
+        tr th:last-child {
+            text-align: right;
+        }
+    }
+    tbody {
+        tr:nth-child(even) {
+            background-color: #f2f2f2a6;
+        }
+        tr td:last-child {
+            text-align: right;
+            white-space: nowrap;
+        }
+    }
+}
+
+.id {
+    display: none;
+}
+
+.counter {
+    display: none;
+}
+
+
+/* .counter2{
+    display: block;
+} */
+
+.hide {
+    display: none;
+}
+
+.edit,
+.trash,
+.options {
+    border-radius: 50%;
+    padding: 5px;
+    margin-right: 2px;
+}
+
+.edit:hover {
+    cursor: pointer;
+    background-color: #AAA;
+}
+
+.trash:hover {
+    cursor: pointer;
+    background-color: rgb(233, 53, 53);
+}
+
+.options:hover {
+    cursor: pointer;
+    background-color: #f5f5f5;
+}
