--- a/src/components/epargne/epargne.html
+++ b/src/components/epargne/epargne.html
@@ -22,7 +22,7 @@
                 <td class="counter">{{index + 1}}</td>
                 <td class="id">{{epargne.id}}</td>
                 <td>{{epargne?.client?.name}} {{epargne?.client?.firstName}}</td>
-                <td>{{epargne.date | date:'mediumDate'}}</td>
+                <td>{{epargne.dateCompte | date:'mediumDate'}}</td>
                 <!-- <td>{{epargne.montantSouscrit}}</td>
                 <td>{{epargne.mise}}</td>
                 <td>{{epargne.avance}}</td>
