--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -85,6 +85,12 @@ div::-webkit-scrollbar-thumb {
     background-image: -webkit-linear-gradient(90deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, .1) 50%, rgba(0, 0, 0, .1) 75%, transparent 75%, transparent)
 }
 
+ion-label.oblige:after,
+span.oblige:after {
+    content: ' *';
+    color: red;
+}
+
 .table-wrapper {
     overflow-x: auto;
 }
@@ -96,6 +102,7 @@ table {
         tr th {
             padding: 10px 3px;
             background-color: #f5f5f5;
+            border-bottom: 1px solid #6d6767;
         }
         tr th:last-child {
             text-align: right;
