--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,15 @@
     width: auto !important;
 }
 
+body {
+    background: #e6ecf0;
+}
+
+.onLine * {
+    color: orangered;
+    font-size: 0.8em;
+}
+
 table thead tr th {
     white-space: nowrap;
 }
@@ -26,7 +35,7 @@ ion-icon.icon.item-icon::before {
     position: absolute;
     top: 50%;
     left: 15px;
-    right: 15px;
+    right: 35px;
     transform: translateY(-50%);
 }
 
@@ -71,10 +80,10 @@ div::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #F5F5F5;
-    border-radius: 10px;
+    border-radius: helper-error10px;
 }
 
-div::-webkit-scrollbar {
+div::-webkit-scrolhelper-errorbar {
     width: 10px;
     background-color: #F5F5F5;
 }
@@ -93,6 +102,12 @@ span.oblige:after {
 
 .table-wrapper {
     overflow-x: auto;
+}
+
+.helper-error {
+    color: red;
+    font-size: 0.8em;
+    font-style: italic;
 }
 
 table {
