--- a/src/components/create-tontine/create-tontine.html
+++ b/src/components/create-tontine/create-tontine.html
@@ -3,7 +3,7 @@
     <ion-list no-lines>
         <ion-item *ngIf="!tontine.id" padding-bottom>
             <ion-label class="oblige">Selectionnez le produit tontine</ion-label>
-            <ion-select [(ngModel)]="tontine.idProduit" required name="produit" [disabled]="tontine.idProduit">
+            <ion-select [(ngModel)]="tontine.idProduit" required name="produit" [disabled]="tontine.id">
                 <ion-option [value]="getSelectedProduit(pdt)" *ngFor="let pdt of dataProvider.userData.produits | typed:'TONTINE'"> {{pdt.libelle}}</ion-option>
                 <ion-option value='' *ngIf="!dataProvider.userData.produits">Pas de produits tontine</ion-option>
             </ion-select>
@@ -16,19 +16,22 @@
             </ion-select>
         </ion-item>
         <ion-item *ngIf="tontine.id" padding-bottom>
-            Nom client: {{tontine.client?.name}} {{tontine.client?.firstName}} <br> Produit: {{tontine.produit?.libelle}}
-
+            Nom client: <strong>{{tontine.client?.name}} {{tontine.client?.firstName}}</strong> <br><br><br> Produit: <strong><em>{{tontine.produit?.libelle}}</em></strong> <br><br>
         </ion-item>
-        <ion-item>
+        <ion-item *ngIf="!tontine.miseTontine">
             <ion-label color="primary" stacked class="oblige">Montant souscrit</ion-label>
-            <ion-input type="text" required pattern="[0-9 ]+" [(ngModel)]="tontine.montantSouscritTontine" name="montantSouscritTontine"></ion-input>
+            <ion-input type="text" required pattern="[0-9 ]+" [(ngModel)]="tontine.montantSouscritTontine" name="montantSouscritTontine" [attr.readonly]="tontine.id?'':null"></ion-input>
         </ion-item>
+        <p *ngIf="tontine.id && tontine.miseTontine">
+            Le montant souscrit est : {{tontine.montantSouscritTontine | currency:'XOF':true:'2.0'}} <br><br>
+        </p>
         <p *ngIf="tontine.montantSouscritTontine && tontine.montantSouscritTontine < produit?.montantMin" class="helper-error" text-right>
-            Le montant souscrit doit dépasser le montant minimum du produit
+            Le montant souscrit doit dépasser le montant minimum du produit ({{produit?.montantMin | currency:'XOF':true:'2.0'}})
         </p>
         <p *ngIf="tontine.montantSouscritTontine && tontine.montantSouscritTontine > produit?.montantMax" class="helper-error" text-right>
-            Le montant souscrit ne peut pas dépasser le montant maximum du produit
+            Le montant souscrit ne peut pas dépasser le montant maximum du produit ({{produit?.montantMax | currency:'XOF':true:'2.0'}})
         </p>
+
     </ion-list>
     <button ion-button outline margin float-right [disabled]="editForm.form.invalid || isSaving || tontine.montantSouscritTontine < produit?.montantMin || tontine.montantSouscritTontine > produit?.montantMax"> 
         <ion-spinner *ngIf="isSaving"></ion-spinner>
