--- a/src/components/client/client.html
+++ b/src/components/client/client.html
@@ -18,7 +18,12 @@
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody>
+        <ng-template #elseBlock>
+            <tbody text-center margin padding>
+                <ion-spinner class="loading" margin padding></ion-spinner>
+            </tbody>
+        </ng-template>
+        <tbody *ngIf="clients;else elseBlock">
             <tr *ngFor="let client of clients | recherche:dataProvider.userData.currentSearch;let index = index">
                 <td class="counter">{{index + 1}}</td>
                 <td class="id">{{client.id}}</td>
