--- a/src/components/create-tontine/create-tontine.html
+++ b/src/components/create-tontine/create-tontine.html
@@ -8,10 +8,14 @@
                 <ion-option value='' *ngIf="!dataProvider.userData.produits">Pas de produits tontine</ion-option>
             </ion-select>
         </ion-item>
-        <ion-item *ngIf="!tontine.id" padding-bottom>
+        <ion-item *ngIf="!tontine.id" padding-bottom (click)="openSearch()" style="cursor:pointer">
             <ion-label class="oblige">Selectionnez le client</ion-label>
-            <ion-select [(ngModel)]="tontine.idClient" required name="client" [disabled]="tontine.id">
-                <ion-option [value]="getSelected(clt)" *ngFor="let clt of dataProvider.userData.clients" [disabled]="tontine.id"> {{clt.name}} {{clt.firstName}}</ion-option>
+            <span item-end
+        *ngIf="dataProvider.userData.clients && dataProvider.userData.clients.length > 3">
+        {{client?.name}} {{client?.firstName}}
+    </span> 
+            <ion-select [(ngModel)]="tontine.idClient" required name="client" [disabled]="tontine.id" *ngIf="!dataProvider.userData.clients || dataProvider.userData.clients.length <= 3">
+            <ion-option [value]="getSelected(clt)" *ngFor="let clt of dataProvider.userData.clients" [disabled]="tontine.id"> {{clt.name}} {{clt.firstName}}</ion-option>
                 <ion-option value='' *ngIf="!dataProvider.userData.clients">Pas de clients</ion-option>
             </ion-select>
         </ion-item>
