--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -178,3 +178,7 @@ table {
     cursor: pointer;
     background-color: #f5f5f5;
 }
+.client-search .modal-wrapper{
+ max-width: 350px !important;
+ margin: 5px auto !important;
+}
