--- a/src/components/board/board.html
+++ b/src/components/board/board.html
@@ -39,9 +39,11 @@
         <canvas id="myChart" #myChart height="200" no-padding no-margin></canvas>
     </ion-card>
     <ion-card ion-col col-5 text-center margin>
+        <h5>Compte tontine/mois</h5>
         <canvas id="myChart2" #myChart2 height="200" no-padding no-margin></canvas>
     </ion-card>
     <ion-card ion-col col-6 text-center margin>
+        <h5>Compte epargne/mois</h5>
         <canvas id="myChart3" #myChart3 height="200" no-padding no-margin></canvas>
     </ion-card>
 
