--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -80,10 +80,10 @@ div::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #F5F5F5;
-    border-radius: helper-error10px;
+    border-radius: 10px;
 }
 
-div::-webkit-scrolhelper-errorbar {
+div::-webkit-scrollbar {
     width: 10px;
     background-color: #F5F5F5;
 }
