--- a/src/components/retrait-epargne/retrait-epargne.html
+++ b/src/components/retrait-epargne/retrait-epargne.html
@@ -32,6 +32,13 @@
 
                 </td>
             </tr>
+            <tr margin-bottom padding-bottom>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td colspan="2">Total : {{montant | currency:'XOF':true:'2.0'}}</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </div>
