--- a/src/components/depot-epargne/depot-epargne.html
+++ b/src/components/depot-epargne/depot-epargne.html
@@ -39,6 +39,13 @@
 
                 </td>
             </tr>
+            <tr margin-bottom padding-bottom>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td colspan="2">Total : {{montant | currency:'XOF':true:'2.0'}}</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </div>
