--- a/src/components/recettes/recettes.html
+++ b/src/components/recettes/recettes.html
@@ -29,6 +29,13 @@
 
                 </td>
             </tr>
+            <tr margin-bottom padding-bottom>
+                <td></td>
+                <td></td>
+                <td>Total: </td>
+                <td colspan="2" text-center>{{montant | currency:'XOF':true:'2.0'}}</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </div>
