--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,11 +12,15 @@
                 {{menu.libelle}}
                 <ion-note item-end *ngIf="menu.breadcrumbs"></ion-note>
             </ion-item> -->
-            <accordion-list *ngFor="let menu of menus; let index = index" [title]="menu.libelle" [icon]="menu.icon" hasMargin="false" [expanded]="index === 0" no-padding no-margin [hasContent]="menu.breadcrumbs && menu.breadcrumbs.length" (click)="toLink(menu)" [attr.menuToggle]="menu.breadcrumbs && menu.breadcrumbs.length?'':null">
-                <ion-item text-center *ngFor="let bread of menu.breadcrumbs" (click)="toBread(bread)" [ngClass]="{active:userData.code == bread.code}" menuToggle>
+            <span *ngFor="let menu of menus; let index = index">
+            <accordion-list [title]="menu.libelle" [icon]="menu.icon" hasMargin="false" [expanded]="index === 0" no-padding no-margin [hasContent]="menu.breadcrumbs && menu.breadcrumbs.length" (click)="toLink(menu)" [attr.menuToggle]="menu.breadcrumbs && menu.breadcrumbs.length?'':null" *hasRessources="menu.ressource">
+                <span *ngFor="let bread of menu.breadcrumbs">
+                <ion-item text-center (click)="toBread(bread)" [ngClass]="{active:userData.code == bread.code}" menuToggle *hasRessources="bread.ressource">
                     {{bread.libelle}}
                 </ion-item>
+                </span>
             </accordion-list>
+            </span>
         </ion-list>
 
         <ion-list no-lines>
